--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 numpy~=1.24.3
+accelerate~=0.27.2
 scipy~=1.10.1
-pandas~=2.0.3
-matplotlib~=3.7.4
 scikit-learn~=1.3.0
 tqdm~=4.65.0
+matplotlib~=3.7.4
+xgboost~=2.0.3
+shap~=0.44.1
+pandas~=2.0.3
