--- a/results/node_classification/Cora/22-02_04h50/ConfigFile_22-02_04h50.ini
+++ b/results/node_classification/Cora/22-02_04h50/ConfigFile_22-02_04h50.ini
@@ -53,14 +53,33 @@ patience = 50
 best_loss = 0
 predictor_model = GNN_ranking
 criterion = MarginRankingLoss
+spearman_corr_train = 0.8354
+kendall_corr_train = 0.6695
+top_k_acc_train = 0.414
+r2_score_train = 0.6714
+spearman_corr_val = 0.4545
+kendall_corr_val = 0.3455
+top_k_acc_val = 0.3055
+r2_score_val = -0.4526
+spearman_corr_test = 0.3181
+kendall_corr_test = 0.2297
+top_k_acc_test = 0.5391
+r2_score_test = -0.0795
 
 [time]
 distribution_time = 25.9
-sampling_time = 0
+sampling_time = 0.29
 dataset_time_cost = 25.97
+predictor_training_time = 48.09912061691284
+sp_reduce = 11.3117
+pred_time = 272.29
+get_best_model_time = 330.36
+search_time = 662.88
+total_search_time = 688.85
 
 [results]
 accuracy_score_of_best_sampled_model = 0.724
+best_model_accuracy_score = 0.736
 
 [path]
 result_folder = M:\CODES\DGNAP\results/node_classification/Cora/22-02_04h50(#GPU=4)
@@ -75,6 +94,6 @@ total_function = 14
 total_choices = 62
 size_sp = 318504960
 final_total_function = 14
-final_total_choices = 62
-final_size = 318504960
+final_total_choices = 33
+final_size = 41472
 
