--- a/results/node_classification/Cora/Cora_4GPU_04-03_16h11/ConfigFile_04-03_16h11.ini
+++ b/results/node_classification/Cora/Cora_4GPU_04-03_16h11/ConfigFile_04-03_16h11.ini
@@ -3,6 +3,9 @@ dataset_name = Cora
 type_task = node_classification
 dataset_root = M:\CODES\DGNAP/data/node_classification
 shufle_dataset = False
+len_traindata = 6
+len_testdata = 6
+len_valdata = 6
 
 [param]
 project_dir = M:\CODES\DGNAP
@@ -60,6 +63,11 @@ spearman_corr_val = 0.667
 kendall_corr_val = 0.4978
 top_k_acc_val = 0.6642
 r2_score_val = 0.4458
+pearson_corr_test = 0.3125
+spearman_corr_test = 0.3571
+kendall_corr_test = 0.2571
+top_k_acc_test = 0.5119
+r2_score_test = -52.5355
 
 [time]
 distribution_time = Not applicable
@@ -67,9 +75,14 @@ sampling_time = 0.01
 dataset_time_cost = 0.01
 predictor_training_time = 56.149601221084595
 sp_reduce = 4.0579
+pred_time = 136.17
+get_best_model_time = 65.57
+search_time = 262.46
+total_search_time = 262.47
 
 [results]
 accuracy_score_of_best_sampled_model = 0
+best_model_accuracy_score = 0.584
 
 [path]
 result_folder = M:\CODES\DGNAP\results/node_classification/Cora/Cora_4GPU_04-03_16h11
