--- a/results/node_classification/Cora/Cora_4GPU_04-03_16h19/ConfigFile_04-03_16h19.ini
+++ b/results/node_classification/Cora/Cora_4GPU_04-03_16h19/ConfigFile_04-03_16h19.ini
@@ -3,6 +3,9 @@ dataset_name = Cora
 type_task = node_classification
 dataset_root = M:\CODES\DGNAP/data/node_classification
 shufle_dataset = False
+len_traindata = 6
+len_testdata = 6
+len_valdata = 6
 
 [param]
 project_dir = M:\CODES\DGNAP
@@ -60,6 +63,11 @@ spearman_corr_val = 0.6871
 kendall_corr_val = 0.5254
 top_k_acc_val = 0.5909
 r2_score_val = 0.4768
+pearson_corr_test = -0.238
+spearman_corr_test = -0.2711
+kendall_corr_test = -0.1883
+top_k_acc_test = 0.449
+r2_score_test = -26.6674
 
 [time]
 distribution_time = Not applicable
@@ -67,9 +75,14 @@ sampling_time = 0.55
 dataset_time_cost = 0.02
 predictor_training_time = 1999.5209538936615
 sp_reduce = 7.5962
+pred_time = 22488.75
+get_best_model_time = 2091.77
+search_time = 26590.45
+total_search_time = 26590.47
 
 [results]
 accuracy_score_of_best_sampled_model = 0
+best_model_accuracy_score = 0.566
 
 [path]
 result_folder = M:\CODES\DGNAP\results/node_classification/Cora/Cora_4GPU_04-03_16h19
